# karaoke-transcriber

./: .gitignore  LICENSE  README.md  check-env.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
python_backend/: karaoke_gen.py
src/: index.ts
